--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <title>jQuery Calculator</title>
   <link rel="stylesheet" href="css/app.css">
@@ -8,7 +9,7 @@
 <body>
   <div id="calculator">
     <div id="screen-container">
-      <div id="screen"></div>
+      <input type="text" id="screen" autofocus/>
     </div>
 
     <div id="buttons-container">
