--- a/index.html
+++ b/index.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
-  <meta charset="utf-8">
-  <title>jQuery Calculator</title>
-  <link rel="stylesheet" href="css/app.css">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <!-- <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script> -->
+    <meta charset="utf-8">
+    <title>jQuery Calculator</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-  <div id="calculator">
-    <div id="screen-container">
-      <input type="text" id="screen" autofocus/>
-    </div>
-
-    <div id="buttons-container">
-      <div class="buttons">
-        <span class="operator" id="clear">C</span>
-        <span class="operator">÷</span>
-        <span class="operator">x</span>
-        <span>7</span>
-        <span>8</span>
-        <span>9</span>
-        <span class="operator">-</span>
-        <span>4</span>
-        <span>5</span>
-        <span>6</span>
-        <span class="operator">+</span>
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-        <span class="operator" id="equals">=</span>
-        <div class="l-row">
-          <span id="zero">0</span>
+    <div id="calculator">
+        <div id="screen-container">
+            <input type="text" id="screen" autofocus/>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <script src="js/jquery.js"></script>
-  <script src="js/app.js"></script>
+        <div id="buttons-container">
+            <div class="buttons">
+                <span class="operator" id="clear">C</span>
+                <span class="operator">÷</span>
+                <span class="operator">x</span>
+                <span>7</span>
+                <span>8</span>
+                <span>9</span>
+                <span class="operator">-</span>
+                <span>4</span>
+                <span>5</span>
+                <span>6</span>
+                <span class="operator">+</span>
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+                <span class="operator" id="equals">=</span>
+                <div class="l-row">
+                    <span id="zero">0</span>
+                    <span id="dot">.</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/app.js"></script>
 </body>
+
 </html>
